--- a/app/src/main/res/layout/driver_item_view.xml
+++ b/app/src/main/res/layout/driver_item_view.xml
@@ -69,25 +69,25 @@
                     </RelativeLayout>
 
                     <RelativeLayout
-                        android:id="@+id/dr_telp_driver"
+                        android:id="@+id/dr_sim_driver"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:padding="@dimen/xmin_padding"
                         tools:ignore="UselessParent">
 
                         <ImageView
-                            android:id="@+id/dr_telp_ico"
+                            android:id="@+id/dr_sim_ico"
                             android:layout_width="@dimen/thumb_prop_width"
                             android:layout_height="@dimen/thumb_prop_height"
                             android:layout_marginEnd="@dimen/min_padding"
-                            app:srcCompat="@drawable/ic_phone_black_18dp"
-                            android:contentDescription="phone"/>
+                            android:contentDescription="phone"
+                            app:srcCompat="@drawable/ic_contact_mail_black_18dp" />
 
                         <TextView
-                            android:id="@+id/dr_telp_info"
+                            android:id="@+id/dr_sim_info"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
-                            android:layout_toEndOf="@+id/dr_telp_ico"/>
+                            android:layout_toEndOf="@+id/dr_sim_ico" />
 
                     </RelativeLayout>
 
