--- a/app/src/main/res/layout/fragment_history_cancel.xml
+++ b/app/src/main/res/layout/fragment_history_cancel.xml
@@ -6,10 +6,10 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    tools:context="id.rentist.mitrarentist.fragment.HistorySaldoFragment">
+    tools:context="id.rentist.mitrarentist.fragment.HistoryCancelFragment">
 
     <android.support.v7.widget.RecyclerView
-        android:id="@+id/hsaldo_recyclerViewFrag"
+        android:id="@+id/hcancel_recyclerViewFrag"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:padding="@dimen/xmin_padding">
