swipe refresh pengguna dan driver

--- a/app/src/main/res/layout/content_driver.xml
+++ b/app/src/main/res/layout/content_driver.xml
@@ -1,11 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/content_driver"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    app:layout_behavior="@string/appbar_scrolling_view_behavior"
     tools:context="id.rentist.mitrarentist.DriverActivity"
     tools:showIn="@layout/activity_driver">
 
@@ -13,7 +12,9 @@
         android:id="@+id/dr_recyclerView"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:padding="@dimen/xmin_padding">
+        android:padding="@dimen/xmin_padding"
+        android:layout_marginTop="@dimen/breadcrumb_height"
+        >
     </android.support.v7.widget.RecyclerView>
 
-</android.support.constraint.ConstraintLayout>
+</LinearLayout>
