--- a/app/src/main/res/layout/activity_form_driver.xml
+++ b/app/src/main/res/layout/activity_form_driver.xml
@@ -21,13 +21,7 @@
 
     </android.support.design.widget.AppBarLayout>
 
-    <android.support.v7.widget.RecyclerView
-        android:id="@+id/edr_recyclerView"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:layout_marginTop="@dimen/breadcrumb_height"
-        android:padding="@dimen/xmin_padding">
-    </android.support.v7.widget.RecyclerView>
+    <include layout="@layout/content_form_driver"/>
 
     <android.support.design.widget.FloatingActionButton
         android:id="@+id/fab"
