--- a/app/src/main/res/layout/content_dompet.xml
+++ b/app/src/main/res/layout/content_dompet.xml
@@ -5,6 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
+    android:background="@color/colorBackgound"
     app:layout_behavior="@string/appbar_scrolling_view_behavior"
     tools:context="id.rentist.mitrarentist.DompetActivity"
     tools:showIn="@layout/activity_dompet">
@@ -16,7 +17,7 @@
         <android.support.v7.widget.CardView
             android:id="@+id/credit_info"
             android:layout_width="match_parent"
-            android:layout_height="@dimen/explorer_item_size"
+            android:layout_height="wrap_content"
             android:layout_margin="@dimen/xmin_padding"
             android:clickable="true"
             android:foreground="?selectableItemBackground"
@@ -31,18 +32,18 @@
 
                 <ImageView
                     android:id="@+id/dm_credit_ico"
-                    android:layout_width="@dimen/thumb_width"
-                    android:layout_height="@dimen/thumb_height"
+                    android:layout_width="@dimen/thumb_med_width"
+                    android:layout_height="@dimen/thumb_med_height"
                     android:layout_centerVertical="true"
                     android:layout_marginEnd="@dimen/min_padding"
                     android:contentDescription="credit"
                     android:src="@drawable/dompet_ico" />
 
                 <LinearLayout
+                    android:id="@+id/dm_det_saldo"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_centerVertical="true"
-                    android:id="@+id/dm_det_saldo"
                     android:layout_toEndOf="@+id/dm_credit_ico"
                     android:orientation="vertical">
 
@@ -68,7 +69,6 @@
                 </LinearLayout>
 
 
-
             </RelativeLayout>
 
 
@@ -77,7 +77,7 @@
         <android.support.v7.widget.CardView
             android:id="@+id/tunai_info"
             android:layout_width="match_parent"
-            android:layout_height="@dimen/explorer_item_size"
+            android:layout_height="wrap_content"
             android:layout_below="@+id/credit_info"
             android:layout_margin="@dimen/xmin_padding"
             android:clickable="true"
@@ -93,8 +93,8 @@
 
                 <ImageView
                     android:id="@+id/dm_tunai_ico"
-                    android:layout_width="@dimen/thumb_width"
-                    android:layout_height="@dimen/thumb_height"
+                    android:layout_width="@dimen/thumb_med_width"
+                    android:layout_height="@dimen/thumb_med_height"
                     android:layout_centerVertical="true"
                     android:layout_marginEnd="@dimen/min_padding"
                     android:contentDescription="credit"
