--- a/app/src/main/res/layout/content_form_driver.xml
+++ b/app/src/main/res/layout/content_form_driver.xml
@@ -13,12 +13,14 @@
     <ScrollView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:background="@color/colorWhite">
+        android:background="@color/colorWhite"
+        >
 
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:orientation="vertical">
+            android:orientation="vertical"
+            android:layout_marginBottom="@dimen/min_padding">
 
             <LinearLayout
                 android:layout_width="match_parent"
@@ -43,22 +45,95 @@
                     android:text="Pilih Foto" />
             </LinearLayout>
 
+            <RelativeLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:background="@color/cardview_dark_background"
+                android:padding="@dimen/min_padding"
+                android:layout_marginBottom="@dimen/min_padding">
+
+                <TextView
+                    android:id="@+id/textView4"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_alignParentStart="true"
+                    android:layout_centerVertical="true"
+                    android:text="Data Pengemudi"
+                    android:textAlignment="center"
+                    android:textColor="@color/colorWhite"
+                    android:textSize="@dimen/medium_text"
+                    android:textStyle="bold" />
+
+            </RelativeLayout>
+
             <EditText
                 android:id="@+id/pr_driver_name"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:ems="10"
-                android:hint="nama driver"
+                android:hint="Nama"
+                android:imeOptions="actionNext"
                 android:inputType="textPersonName"
                 android:padding="@dimen/min_padding" />
 
+            <GridLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:columnCount="2"
+                android:padding="@dimen/xmin_padding">
+
+                <TextView
+                    android:id="@+id/vou_type"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_column="0"
+                    android:layout_columnWeight="0"
+                    android:layout_gravity="center_vertical"
+                    android:text="Gender : "
+                    android:textSize="@dimen/medium_text" />
+
+
+                <RadioGroup
+                    android:id="@+id/pr_rad_gender"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_columnWeight="1">
+
+                    <GridLayout
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:columnCount="2"
+                        android:padding="@dimen/xmin_padding">
+
+                        <RadioButton
+                            android:id="@+id/radioButton2"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:layout_columnWeight="1"
+                            android:layout_weight="1"
+                            android:text="Male" />
+
+                        <RadioButton
+                            android:id="@+id/radioButton"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:layout_columnWeight="1"
+                            android:layout_weight="1"
+                            android:text="Female" />
+
+                    </GridLayout>
+                </RadioGroup>
+
+            </GridLayout>
+
             <EditText
-                android:id="@+id/pr_email"
+                android:id="@+id/pr_sim_number"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:ems="10"
-                android:hint="email"
-                android:inputType="textEmailAddress"
+                android:hint="Nomor SIM"
+                android:inputType="number"
+                android:imeOptions="actionNext"
                 android:padding="@dimen/min_padding" />
 
             <EditText
@@ -66,20 +141,13 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:ems="10"
-                android:hint="nomor telepon"
-                android:inputType="phone"
+                android:hint="Tanggal Lahir"
+                android:inputType="date"
                 android:padding="@dimen/min_padding" />
 
-            <EditText
-                android:id="@+id/pr_address"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:ems="10"
-                android:lines="3"
-                android:hint="alamat"
-                android:inputType="textMultiLine" />
 
         </LinearLayout>
     </ScrollView>
+
 
 </LinearLayout>
