--- a/app/src/main/res/layout/content_dashboard.xml
+++ b/app/src/main/res/layout/content_dashboard.xml
@@ -96,17 +96,13 @@
                 <LinearLayout
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
-                    android:layout_alignParentStart="true"
-                    android:layout_centerVertical="true"
-                    android:layout_marginBottom="@dimen/xmin_padding"
-                    android:layout_marginEnd="@dimen/btn_medium_height"
-                    android:layout_marginStart="@dimen/min_padding"
-                    android:layout_marginTop="@dimen/xmin_padding"
                     android:gravity="center"
                     android:orientation="vertical"
                     android:padding="@dimen/xmin_padding"
                     android:paddingEnd="@dimen/fab_margin"
-                    android:paddingStart="@dimen/fab_margin">
+                    android:paddingStart="@dimen/fab_margin"
+                    android:layout_centerVertical="true"
+                    android:layout_toStartOf="@+id/btn_to_det_new_trans">
 
                     <TextView
                         android:id="@+id/val_new_trans"
@@ -170,7 +166,7 @@
                         android:layout_height="wrap_content"
                         android:text="7.000.000 IDR"
                         android:textAlignment="textEnd"
-                        android:textColor="@color/colorPrimary"
+                        android:textColor="@color/colorPrice"
                         android:textSize="30sp"
                         android:textStyle="bold" />
 
@@ -183,6 +179,48 @@
                     android:layout_alignParentEnd="true"
                     android:background="@color/colorNearWhite"
                     app:srcCompat="@drawable/ic_chevron_right_black_36dp" />
+
+            </RelativeLayout>
+
+            <RelativeLayout
+                android:id="@+id/rl_rev_poin"
+                android:layout_width="match_parent"
+                android:layout_height="@dimen/breadcrumb_height"
+                android:layout_marginBottom="@dimen/xmin_padding"
+                android:background="@color/colorWhite">
+
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_alignParentStart="true"
+                    android:layout_centerVertical="true"
+                    android:layout_marginEnd="@dimen/min_padding"
+                    android:layout_marginStart="@dimen/min_padding"
+                    android:orientation="horizontal"
+                    android:padding="@dimen/xmin_padding"
+                    android:paddingEnd="@dimen/fab_margin"
+                    android:paddingStart="@dimen/fab_margin">
+
+                    <TextView
+                        android:id="@+id/val_poin"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:text="150"
+                        android:textAlignment="textEnd"
+                        android:textColor="@color/colorPrimary"
+                        android:textSize="30sp"
+                        android:textStyle="bold" />
+
+                    <TextView
+                        android:id="@+id/text_poin"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_marginStart="@dimen/xmin_padding"
+                        android:text="Poin"
+                        android:textSize="20sp" />
+
+
+                </LinearLayout>
 
             </RelativeLayout>
 
