--- a/app/src/main/res/layout/content_drop_aset.xml
+++ b/app/src/main/res/layout/content_drop_aset.xml
@@ -45,7 +45,7 @@
                 android:text="23 Agustus 2017 - 25 Agustus 2017"
                 android:textAlignment="center"
                 android:textColor="@color/colorPrimary"
-                android:textSize="@dimen/medium_text" />
+                android:textSize="@dimen/small_text" />
 
             <TextView
                 android:id="@+id/textView5"
@@ -78,10 +78,11 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_marginEnd="@dimen/btn_thumb"
-                    android:columnCount="2">
+                    android:columnCount="2"
+                    android:layout_centerVertical="true">
 
                     <TextView
-                        android:layout_width="0"
+                        android:layout_width="0dp"
                         android:layout_height="wrap_content"
                         android:layout_columnWeight="1"
                         android:text="Aset :"
@@ -90,7 +91,7 @@
 
                     <TextView
                         android:id="@+id/tr_d_aset_name"
-                        android:layout_width="0"
+                        android:layout_width="0dp"
                         android:layout_height="wrap_content"
                         android:layout_columnWeight="2"
                         android:layout_marginEnd="@dimen/xmin_padding"
@@ -99,7 +100,7 @@
                         android:textSize="@dimen/small_text" />
 
                     <TextView
-                        android:layout_width="0"
+                        android:layout_width="0dp"
                         android:layout_height="wrap_content"
                         android:layout_columnWeight="1"
                         android:text="Member :"
@@ -108,7 +109,7 @@
 
                     <TextView
                         android:id="@+id/tr_d_aset_member"
-                        android:layout_width="0"
+                        android:layout_width="0dp"
                         android:layout_height="wrap_content"
                         android:text="Dani Hidayat"
                         android:layout_columnWeight="2"
@@ -117,7 +118,7 @@
                         />
 
                     <TextView
-                        android:layout_width="0"
+                        android:layout_width="0dp"
                         android:layout_height="wrap_content"
                         android:layout_columnWeight="1"
                         android:text="Payment :"
@@ -127,11 +128,30 @@
 
                     <TextView
                         android:id="@+id/tr_d_payment"
-                        android:layout_width="0"
+                        android:layout_width="0dp"
                         android:layout_height="wrap_content"
                         android:layout_columnWeight="2"
                         android:layout_marginEnd="@dimen/btn_thumb"
                         android:text="Credit "
+                        android:textColor="@color/colorBlack54"
+                        android:textSize="@dimen/small_text" />
+
+                    <TextView
+                        android:layout_width="0dp"
+                        android:layout_height="wrap_content"
+                        android:layout_columnWeight="1"
+                        android:text="Note :"
+                        android:textColor="@color/colorBlack54"
+                        android:textSize="@dimen/small_text" />
+
+
+                    <TextView
+                        android:id="@+id/tr_d_note"
+                        android:layout_width="0dp"
+                        android:layout_height="wrap_content"
+                        android:layout_columnWeight="2"
+                        android:layout_marginEnd="@dimen/btn_thumb"
+                        android:text="Harap datang tepat waktu"
                         android:textColor="@color/colorBlack54"
                         android:textSize="@dimen/small_text" />
 
@@ -165,7 +185,7 @@
 
         </LinearLayout>
 
-        <LinearLayout
+        <RelativeLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_alignParentStart="true"
@@ -173,28 +193,42 @@
             android:layout_marginTop="@dimen/xmin_padding"
             android:background="@color/colorWhite"
             android:orientation="vertical"
-            android:padding="@dimen/xmin_padding">
+            android:padding="@dimen/xmin_padding"
+            android:id="@+id/linearLayout">
 
             <ImageView
                 android:id="@+id/tr_d_thumb"
                 android:layout_width="@dimen/thumb_width"
                 android:layout_height="@dimen/thumb_height"
-                android:layout_gravity="center_horizontal"
                 android:layout_margin="@dimen/xmin_padding"
                 android:layout_weight="1"
                 app:srcCompat="@drawable/blue_android" />
 
-            <ImageButton
-                android:id="@+id/photo_imageButton"
-                android:layout_width="@dimen/thumb_width"
-                android:layout_height="@dimen/btn_thumb"
-                android:layout_columnWeight="1"
-                android:layout_gravity="center_horizontal"
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_centerVertical="true"
+                android:layout_height="wrap_content"
+                android:layout_toRightOf="@id/tr_d_thumb"
+                android:layout_toLeftOf="@+id/button222"
+                android:layout_margin="@dimen/xmin_padding"
+                android:text="* foto pelanggan beserta data diri"/>
+
+
+            <Button
+                android:id="@+id/button222"
+                android:layout_width="150dp"
+                android:layout_alignParentEnd="true"
+                android:layout_centerVertical="true"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
                 android:background="@color/colorBlack54"
-                app:srcCompat="@drawable/ic_camera_alt_white_24dp" />
+                android:paddingStart="@dimen/min_padding"
+                android:drawableStart="@drawable/ic_camera_alt_white_24dp"
+                android:textColor="@color/colorWhite"
+                android:text="Ambil Foto" />
 
 
-        </LinearLayout>
+        </RelativeLayout>
 
         <Button
             android:id="@+id/tr_d_btn_done"
@@ -208,6 +242,14 @@
             android:textColor="@color/colorWhite"
             android:textSize="@dimen/medium_text"
             android:textStyle="bold" />
+
+        <com.google.android.gms.maps.MapView
+            android:id="@+id/mapView"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignParentStart="true"
+            android:layout_below="@+id/linearLayout"
+            android:layout_marginStart="145dp" />
 
 
     </RelativeLayout>
