--- a/app/src/main/res/layout/content_drop_aset.xml
+++ b/app/src/main/res/layout/content_drop_aset.xml
@@ -12,8 +12,8 @@
     android:background="@color/colorBackgound">
 
     <RelativeLayout
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content">
+        android:layout_width="match_parent"
+        android:layout_height="match_parent">
 
         <LinearLayout
             android:id="@+id/tr_d_pinfo"
@@ -59,20 +59,16 @@
 
         </LinearLayout>
 
-        <LinearLayout
-            android:id="@+id/tr_d_det"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_below="@+id/tr_d_pinfo"
-            android:layout_marginTop="@dimen/xmin_padding"
-            android:background="@color/colorWhite"
-            android:orientation="vertical"
-            android:padding="@dimen/xmin_padding">
 
 
             <RelativeLayout
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content">
+                android:id="@+id/tr_d_det"
+                android:layout_below="@+id/tr_d_pinfo"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="@dimen/xmin_padding"
+                android:padding="@dimen/min_padding"
+                android:background="@color/colorWhite">
 
                 <GridLayout
                     android:layout_width="match_parent"
@@ -82,74 +78,82 @@
                     android:layout_centerVertical="true">
 
                     <TextView
-                        android:layout_width="0dp"
+                        android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:layout_columnWeight="1"
-                        android:text="Aset :"
+                        android:layout_column="0"
+                        android:layout_row="1"
+                        android:text="Aset : "
                         android:textColor="@color/colorBlack54"
                         android:textSize="@dimen/small_text" />
 
                     <TextView
                         android:id="@+id/tr_d_aset_name"
-                        android:layout_width="0dp"
+                        android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:layout_columnWeight="2"
+                        android:layout_column="1"
+                        android:layout_row="1"
                         android:layout_marginEnd="@dimen/xmin_padding"
                         android:text="Mitsubisi Xenia | B 1234 WOW"
                         android:textColor="@color/colorBlack54"
                         android:textSize="@dimen/small_text" />
 
                     <TextView
-                        android:layout_width="0dp"
+                        android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:layout_columnWeight="1"
-                        android:text="Member :"
+                        android:layout_column="0"
+                        android:layout_row="2"
+                        android:text="Member : "
                         android:textColor="@color/colorBlack54"
                         android:textSize="@dimen/small_text" />
 
                     <TextView
                         android:id="@+id/tr_d_aset_member"
-                        android:layout_width="0dp"
+                        android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
+                        android:layout_column="1"
+                        android:layout_row="2"
                         android:text="Dani Hidayat"
-                        android:layout_columnWeight="2"
                         android:textColor="@color/colorBlack54"
                         android:textSize="@dimen/small_text"
                         />
 
                     <TextView
-                        android:layout_width="0dp"
+                        android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:layout_columnWeight="1"
-                        android:text="Payment :"
+                        android:layout_column="0"
+                        android:layout_row="3"
+                        android:text="Payment : "
                         android:textColor="@color/colorBlack54"
                         android:textSize="@dimen/small_text" />
 
 
                     <TextView
                         android:id="@+id/tr_d_payment"
-                        android:layout_width="0dp"
+                        android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:layout_columnWeight="2"
+                        android:layout_column="1"
+                        android:layout_row="3"
                         android:layout_marginEnd="@dimen/btn_thumb"
                         android:text="Credit "
                         android:textColor="@color/colorBlack54"
                         android:textSize="@dimen/small_text" />
 
                     <TextView
-                        android:layout_width="0dp"
+                        android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:layout_columnWeight="1"
-                        android:text="Note :"
+                        android:layout_column="0"
+                        android:layout_row="4"
+                        android:text="Note : "
                         android:textColor="@color/colorBlack54"
                         android:textSize="@dimen/small_text" />
 
 
                     <TextView
                         android:id="@+id/tr_d_note"
-                        android:layout_width="0dp"
+                        android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:layout_columnWeight="2"
+                        android:layout_column="1"
+                        android:layout_row="4"
                         android:layout_marginEnd="@dimen/btn_thumb"
                         android:text="Harap datang tepat waktu"
                         android:textColor="@color/colorBlack54"
@@ -183,7 +187,6 @@
             </RelativeLayout>
 
 
-        </LinearLayout>
 
         <RelativeLayout
             android:layout_width="match_parent"
@@ -242,14 +245,6 @@
             android:textColor="@color/colorWhite"
             android:textSize="@dimen/medium_text"
             android:textStyle="bold" />
-
-        <com.google.android.gms.maps.MapView
-            android:id="@+id/mapView"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_alignParentStart="true"
-            android:layout_below="@+id/linearLayout"
-            android:layout_marginStart="145dp" />
 
 
     </RelativeLayout>
