--- a/app/src/main/res/menu/activity_dashboard_drawer.xml
+++ b/app/src/main/res/menu/activity_dashboard_drawer.xml
@@ -19,6 +19,10 @@
             android:icon="@drawable/ic_person_black_24dp"
             android:title="Pengemudi" />
         <item
+            android:id="@+id/nav_drop"
+            android:icon="@drawable/ic_directions_car_black_24dp"
+            android:title="Antar Aset" />
+        <item
             android:id="@+id/nav_dompet"
             android:icon="@drawable/ic_account_balance_wallet_black_24dp"
             android:title="Dompet" />
