--- a/app/src/main/res/layout/content_form_voucher.xml
+++ b/app/src/main/res/layout/content_form_voucher.xml
@@ -8,15 +8,15 @@
     <ScrollView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="@dimen/btn_lmedium_height"
-        >
+        android:layout_marginBottom="@dimen/btn_lmedium_height">
 
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:orientation="vertical"
             android:layout_margin="@dimen/xmin_padding"
-            android:background="@drawable/radius_white">
+            android:background="@drawable/radius_white"
+            android:focusableInTouchMode="true">
 
             <RelativeLayout
                 android:id="@+id/header"
