--- a/app/src/main/res/layout/fragment_kebijakan_khusus.xml
+++ b/app/src/main/res/layout/fragment_kebijakan_khusus.xml
@@ -21,6 +21,7 @@
         android:layout_height="wrap_content"
         android:layout_gravity="bottom|end"
         android:layout_margin="@dimen/fab_margin"
-        app:srcCompat="@drawable/ic_action_add" />
+        app:backgroundTint="@android:color/holo_green_light"
+        app:srcCompat="@drawable/ic_add_white_36dp" />
 
 </android.support.design.widget.CoordinatorLayout>
