--- a/app/src/main/res/layout/voucher_item_view.xml
+++ b/app/src/main/res/layout/voucher_item_view.xml
@@ -127,7 +127,7 @@
                     >
 
                     <TextView
-                        android:id="@+id/vou_startDate"
+                        android:id="@+id/vou_date"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_marginTop="@dimen/xmin_padding"
